<resources>
    <string name="search_call_hint">输入用户名搜索已注册用户</string>
    <string name="login_search_call_hint">输入手机号搜索已注册用户</string>
    <string name="login_privacy_text">已同意《<a href="http://privacy.qq.com/">隐私政策</a>》</string>
    <string name="login_status_login_success">登录成功</string>
    <string name="login_status_login_fail">登录失败</string>
    <string name="login_status_logging_in">正在登录</string>
    <string name="login_title_trtc">腾讯云TRTC</string>
    <string name="login_title_liteav">腾讯云视立方</string>
    <string name="login_text_phone">手机号</string>
    <string name="login_hint_phone">请输入手机号</string>
    <string name="login_text_sms">验证码</string>
    <string name="login_hint_sms">请输入验证码</string>
    <string name="login_text_get_sms">获取验证码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_tips_auto_login_fail">自动登录失败，请重新获取验证码登录</string>
    <string name="login_warning_get_sms_frequently">不要频繁获取验证码</string>
    <string name="login_tips_invalid_phone">请填写正确的手机号</string>
    <string name="login_tips_sent_sms">验证码已发送</string>
    <string name="login_get_sms_fail">获取验证码失败:%1$s</string>
    <string name="login_tips_input_correct_info">请输入手机号和验证码</string>
    <string name="login_tips_register">首次登录请先补充用户信息</string>
    <string name="login_form_count_time">%1$d秒</string>
    <string name="login_title_register">注册</string>
    <string name="login_text_user_name">用户名</string>
    <string name="login_hint_user_name">请输入用户名</string>
    <string name="login_tips_user_name">仅限中文、字母、数字和下划线，2-20个字</string>
    <string name="login_user_protocol">用户协议</string>
    <string name="login_user_approve">同意</string>
    <string name="login_user_refuse">不同意</string>
    <string name="login_first_enter_room_tips">配合相关部门监管要求，本APP音视频通话及直播过程均有全程录制存档，严禁色情、辱骂、暴恐、涉政等违规内容。</string>
    <string name="login_dialog_ok">确定</string>
    <string name="login_toast_set_username">请设置用户名</string>
    <string name="login_toast_register_success_and_logging_in">注册成功</string>
    <string name="login_toast_failed_to_set_username">设置失败: %s</string>
    <string name="login_welcome_tips">欢迎使用\n腾讯云实时音视频</string>
    <string name="login_toast_login_fail">登录IM失败，所有功能不可用[%1$d]%2$s</string>
    <string name="login_toast_login_success">登录成功</string>
    <string name="login_confirm">确认</string>
    <string name="login_set_user_avatar">设置头像</string>
    <string name="login_toast_success_to_set_username">设置成功</string>
    <string name="login_not_register">未注册用户</string>
    <string name="login_country_code">国际电话区号</string>
    <string name="login_btn_cancel">取消</string>
    <string name="login_send_verify_code">请发送验证码</string>
    <string name="login_protocol_start">我已阅读并同意</string>
    <string name="login_privacy_protocol_detail">《隐私条例》</string>
    <string name="login_user_agreement_detail">《用户协议》</string>
    <string name="login_protocol_and">和</string>
    <string name="login_privacy_protocol">隐私条例</string>
    <string name="login_user_agreement">用户协议</string>
    <string name="login_protocol_end">，并授权腾讯云使用该账号（昵称、头像、电话号码）进行统一管理</string>
    <string name="login_protocol_tip">请先同意隐私条款和用户协议</string>

    <string name="login_protocol_title">欢迎使用腾讯视频云视频云视立方</string>
    <string name="login_protocol_tip_start">欢迎您使用腾讯视频云视频云视立方，我们将通过</string>
    <string name="login_protocol_tip_end">帮助您了解我们收集、使用、存储个人信息的情况，此外您还可以了解到您所享有的相关权利和实现途径，如您同意请点击下方按钮开始接受我们的服务</string>

</resources>
