<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_main_gradient">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/login_title_register"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_user_avatar"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@color/login_color_btn_disable"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_avatar">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_user_name"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/cl_edit"
            app:layout_constraintTop_toTopOf="@id/cl_edit" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:hint="@string/login_hint_user_name"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/login_color_edit_hint"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_user_name"
            app:layout_constraintLeft_toRightOf="@id/tv_user_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_tips_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login_tips_user_name"
        android:textColor="@color/login_color_edit_hint"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_edit" />

    <Button
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_button_border"
        android:text="@string/login_title_register"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tips_user_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
