<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_main_gradient">

    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp" />

    <com.tencent.liteav.login.ui.view.LoginStatusLayout
        android:id="@+id/cl_login_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="130dp"
        android:background="@color/login_color_btn_disable"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/cl_login_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/login_text_phone"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/cl_edit"
            app:layout_constraintTop_toTopOf="@id/cl_edit" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_hint_phone"
            android:inputType="number"
            android:maxLength="11"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/login_color_edit_hint"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_phone_number"
            app:layout_constraintStart_toEndOf="@+id/tv_phone_number" />

        <TextView
            android:id="@+id/tv_country_code"
            android:text="+86"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/login_ic_arrow_right"
            android:drawablePadding="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_phone"
            app:layout_constraintTop_toBottomOf="@id/et_phone" />

        <TextView
            android:id="@+id/tv_sms"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/login_text_sms"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/cl_edit"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />


        <EditText
            android:id="@+id/et_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/login_hint_sms"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/login_color_edit_hint"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_sms"
            app:layout_constraintLeft_toRightOf="@id/tv_sms" />

        <TextView
            android:id="@+id/tv_get_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_text_get_sms"
            android:textColor="@color/login_color_blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_sms"
            app:layout_constraintLeft_toRightOf="@id/et_sms"
            app:layout_constraintRight_toRightOf="@+id/cl_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/protocol_group"
        app:layout_constraintTop_toBottomOf="@id/cl_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/checkbox_group"
            android:paddingTop="13dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/cb_protocol"
                android:button="@null"
                android:background="@drawable/login_check_box_selector"
                android:layout_width="16dp"
                android:layout_height="16dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_marginTop="10dp"
            android:textColor="@color/login_color_edit_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_border"
        android:text="@string/login_btn_login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/protocol_group" />

</androidx.constraintlayout.widget.ConstraintLayout>
