<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/login_color_white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/login_protocol_title"
        android:textColor="@color/login_color_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="aa"
        android:textColor="@color/login_main_text"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <View
        android:id="@+id/view_divide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/login_color_line"
        app:layout_constraintTop_toBottomOf="@id/tv_message" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_divide">

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:background="@drawable/login_bg_button_no_radius"
            android:text="@string/login_user_refuse"
            android:textColor="@drawable/login_bg_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_positive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:background="@drawable/login_bg_button_no_radius"
            android:text="@string/login_user_approve"
            android:textColor="@drawable/login_bg_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_negative"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
